--- a/lection/styles.css
+++ b/lection/styles.css
@@ -1,7 +1,32 @@
-.table-footer {
-    text-align: center;
+.task-list {
+    margin-bottom: 20px;
+}
+.task-item {
+    color: #555;
+    border: 1px solid #bbb;
+    cursor: pointer;
+    padding: 10px 20px;
+    margin: 5px 0;
+    font-size: 20px;
+    background-color: lightyellow;
 }
 
-.form-input.invalid {
+.task-item.done {
+    background-color: lightgreen;
+}
+
+.delete-btn {
+    float: right;
+}
+
+input.errorInput, input:focus.errorInput {
     border-color: red;
+}
+
+.error{
+    color: red;
+}
+
+.hidden {
+    display: none;
 }
